Fix homepage spacing

--- a/src/sass/layout/_home_section.sass
+++ b/src/sass/layout/_home_section.sass
@@ -1,19 +1,16 @@
-.home-section
+.home-template
 
-  > div
-    @include outer-container
-    padding: 40px 0
+  section
+    > .wrapper
+      @include outer-container
+      padding: 40px 0
 
-  > .content
-    @include type-system-main
-    padding: 40px 20px
+    .btn
+      margin: 20px 0
 
-    > h1
-      font-size: 40px
+  section:nth-child(even)
+    background-color: $alternating-background
 
-  .btn
-    margin: 20px 0
+    p, h2
+      color: $alternating-foreground
 
-.home-section:nth-child(even)
-  background-color: $alternating-background
-  color: $alternating-foreground
